@@ -1,3 +1,5 @@
+    - Add method upload_status (ghathwar on Github)
+
 4.01020 2016-04-03
     - Add create_media_metadata endpoint endpoint (AnnMary Mathew)
     - Use JSON::MaybeXS (Olaf Alders)
